--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,4 +1,12 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "hero";
+@import "feature";
+@import "services";
+@import "news";
+@import "events";
+@import "cover";
+@import "test";
+@import "apply";
 @import "footer";
